--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
     <div style="background-color: burlywood;margin: 0; border-radius: 20px; text-align: center;font-size: 20px;padding-top: 1px;padding-bottom: 1px; margin-top: 15px;">
         <h2><a href="./Homework2/homework2.html" >Homework 2(RecursiveSum)</a></h2>
     </div>
+    <div style="background-color: burlywood;margin: 0; border-radius: 20px; text-align: center;font-size: 20px;padding-top: 1px;padding-bottom: 1px; margin-top: 15px;">
+        <h2><a href="./Homework2/homework2.html" >Homework 2(RecursiveSum)</a></h2>
+    </div>
 </body>
 </html>
