--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     Homework-Борисевич Кирилл
 </div>
 <body style="background-color: black;">
-    <div style="background-color: burlywood;margin: 0; border-radius: 20px; text-align: center;font-size: 20px;padding-top: 1px;padding-bottom: 1px; margin-top: 15px;">
-        <h2><a href="./Homework1/iindex.html" >Homework 1(alert)</a></h2>
+    <div style="background-color: rgb(118, 255, 159);margin: 0; border-radius: 20px; text-align: center;font-size: 20px;padding-top: 1px;padding-bottom: 1px; margin-top: 15px;">
+        <h2><a href="./Homework1/iindex.html" >Homework 1(alert)-Проверено!</a></h2>
+    </div>
+    <div style="background-color: rgb(118, 255, 159); border-radius: 20px; text-align: center;font-size: 20px;padding-top: 1px;padding-bottom: 1px; margin-top: 15px;">
+        <h2><a href="./Homework2/homework2.html" >Homework 2(RecursiveSum)-Проверено!</a></h2>
     </div>
     <div style="background-color: burlywood;margin: 0; border-radius: 20px; text-align: center;font-size: 20px;padding-top: 1px;padding-bottom: 1px; margin-top: 15px;">
-        <h2><a href="./Homework2/homework2.html" >Homework 2(RecursiveSum)</a></h2>
+        <h2><a href="./Homework3/js.html" >Homework 3(MOOD)-Надо проверить!</a></h2>
     </div>
 </body>
 </html>
