--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <p>CRUD_APP</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./HomeworkCRUD/Crud.html'">Press</button>
         </div>
-            <div class="mod">
+            <div class="grey">
             <p>A2+</p>
-            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
+            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./A2+/html.html'">Press</button>
         </div>
         <div class="mod">
             <p>A3+</p>
