--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <p>A2+</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./A2+/html.html'">Press</button>
         </div>
-        <div class="mod">
+        <div class="grey">
             <p>A3+</p>
-            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
+            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./A3+/palindrom.html'">Press</button>
         </div>
         <div class="mod">
             <p>A4+</p>
@@ -64,9 +64,9 @@
             <p>B1+</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
         </div>
-        <div class="mod">
+        <div class="grey">
             <p>B2+</p>
-            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
+            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./B2+/reverse.html'">Press</button>
         </div>
         <div class="mod">
             <p>B3+</p>
