--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <p>A3+</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./A3+/palindrom.html'">Press</button>
         </div>
-        <div class="mod">
+        <div class="grey">
             <p>A4+</p>
-            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
+            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./A4+/recursivePalindrome.html'">Press</button>
         </div>
         <div class="pup">
             <p>TREESUM</p>
