--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <p>COUNTRIES</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
         </div>
-        <div class="mod">
+        <div class="grey">
             <p>B1+</p>
-            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
+            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./B1+/Data.html'">Press</button>
         </div>
         <div class="grey">
             <p>B2+</p>
