--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
             <p>TREESUM</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./Homework2/homework2.html'">Press</button>
         </div>
+        <div class="grey">
+            <p>DISCRIMINANT</p>
+            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./discriminant/test.html'">Press</button>
+        </div>
         <div class="mod">
             <p>COUNTRIES</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
@@ -136,6 +140,7 @@
             <p>TENNIS</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
         </div>
+        
     
     </div>
 
