--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
             <p>CRUD_APP</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./HomeworkCRUD/Crud.html'">Press</button>
         </div>
-            <div class="grey">
+            <div class="pup">
             <p>A2+</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./A2+/html.html'">Press</button>
         </div>
-        <div class="grey">
+        <div class="pup">
             <p>A3+</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./A3+/palindrom.html'">Press</button>
         </div>
-        <div class="grey">
+        <div class="pup">
             <p>A4+</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./A4+/recursivePalindrome.html'">Press</button>
         </div>
@@ -64,11 +64,11 @@
             <p>COUNTRIES</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
         </div>
-        <div class="grey">
+        <div class="pup">
             <p>B1+</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./B1+/Data.html'">Press</button>
         </div>
-        <div class="grey">
+        <div class="pup">
             <p>B2+</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./B2+/reverse.html'">Press</button>
         </div>
