--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
             <p>DISCRIMINANT</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./discriminant/test.html'">Press</button>
         </div>
+        <div class="grey">
+            <p>CREATE_TAGS</p>
+            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./tags/tags.html'">Press</button>
+        </div>
         <div class="mod">
             <p>COUNTRIES</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
