--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
         <div class="mod">
             <p>VOWELS</p>
-            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
+            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./vowels/vowels.html'">Press</button>
         </div>
         <div class="mod">
             <p>ROOTS</p>
