--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <p>B6+</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
         </div>
-        <div class="mod">
+        <div class="grey">
             <p>VOWELS</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./vowels/vowels.html'">Press</button>
         </div>
