--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
             <p>DRINK</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
         </div>
-        <div class="mod">
+        <div class="grey">
             <p>DRINK_CLASS</p>
-            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
+            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./StorageDrink/storagedrink.html'">Press</button>
         </div>
         <div class="mod">
             <p>VOWELS_ARR</p>
