--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             <p>TREESUM</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./Homework2/homework2.html'">Press</button>
         </div>
-        <div class="grey">
+        <div class="pup">
             <p>DISCRIMINANT</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./discriminant/test.html'">Press</button>
         </div>
-        <div class="grey">
+        <div class="pup">
             <p>CREATE_TAGS</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./tags/tags.html'">Press</button>
         </div>
@@ -92,7 +92,7 @@
             <p>B6+</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
         </div>
-        <div class="grey">
+        <div class="pup">
             <p>VOWELS</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./vowels/vowels.html'">Press</button>
         </div>
@@ -108,17 +108,17 @@
             <p>DRINK</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
         </div>
-        <div class="grey">
+        <div class="pup">
             <p>DRINK_CLASS</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./StorageDrink/storagedrink.html'">Press</button>
         </div>
-        <div class="mod">
+        <div class="grey">
             <p>VOWELS_ARR</p>
-            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
+            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./vow/vow.html'">Press</button>
         </div>
-        <div class="mod">
+        <div class="grey">
             <p>DYN_FORM</p>
-            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
+            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./dynform/dymForm.html'">Press</button>
         </div>
         <div class="mod">
             <p>DYN_FORM_VALID</p>
