--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             <p>B2+</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./B2+/reverse.html'">Press</button>
         </div>
-        <div class="mod">
+        <div class="pup">
             <p>B3+</p>
-            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location=''">Press</button>
+            <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./Calculate/calc.html'">Press</button>
         </div>
         <div class="mod">
             <p>B4+</p>
