--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p>B2+</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./B2+/reverse.html'">Press</button>
         </div>
-        <div class="pup">
+        <div class="grey">
             <p>B3+</p>
             <button class="but hvr-radial-out hvr-buzz-out" onclick="document.location='./Calculate/calc.html'">Press</button>
         </div>
